@@ -1,3 +1,6 @@
+10/08/15
+  -Updated TagNameParser and InitialRead to store only base tag
+  
 10/07/15
   -Initial reads minimum amount of data to get data type
 
